# heart_disease

./: .gitignore  .pre-commit-config.yaml  combined_heart_disease_dataset.csv  config.py  dask_utils.py  data_utils.py  ensemble_utils.py  heart_disease_analysis copy.py  heart_disease_analysis.py  heart_disease_analysis_gridsearch.py  main.py  model_interpretation.py  model_training.py  mypy.ini  notebook.ipynb  preprocessing.py  pyproject.toml  run_logs.csv  run_notebook.py  run_pytest.sh  unified_heart_disease_dataset.csv
cache/: X_combined.joblib  preprocessor_combined.joblib  y_combined.joblib
cache/models/: logistic_regression_model.joblib  xgboost_model.joblib
tests/: test_data_utils.py  test_model_schema.py  test_model_training.py
tests/test_data/: dummy_data.csv  dummy_data_with_string_in_numeric.csv  synthetic_data_harmonize.csv  uci_data_harmonize.csv
utils/: logger_config.py  logging_utils.py
