[project]
name = "heart-disease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coiled>=1.118.3",
    "dask-kubernetes>=2025.7.0",
    "dask-ml>=2025.1.0",
    "dask[complete]>=2025.7.0",
    "gcsfs==2025.3.0",
    "ipykernel>=6.30.1",
    "joblib",
    "matplotlib>=3.10.5",
    "numpy==1.26.4",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.4",
]
